--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Flama CSS StyleGuide
 email: contas@flama.me
 description: 
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/css-styleguide" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: studioflama
 github_username:  flama
