--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,9 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
 title: Flama CSS StyleGuide
 email: contas@flama.me
 description: Best practices for using CSS
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+baseurl: ""
+url: "http://flama.is"
 twitter_username: studioflama
 github_username:  flama
 
