Link style in titles & code style outrside of pre

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Flama CSS StyleGuide
+title: Flama’s CSS StyleGuide
 email: contas@flama.me
 description: Best practices for using CSS
 baseurl: ""
