--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Flama’s CSS StyleGuide
 email: contas@flama.me
 description: Best practices for using CSS
-baseurl: ""
+baseurl: "/css-styleguide"
 url: "http://flama.is"
 twitter_username: studioflama
 github_username:  flama
