--- a/_config.yml
+++ b/_config.yml
@@ -17,24 +17,25 @@ collections:
      
 navigation:
 - text: Flama’s CSS Styleguide
-  url: /
+  url: /css-styleguide/
 - text: Class Naming Convention
-  url: /contents/class-naming-convention
+  url: /css-styleguide/contents/class-naming-convention
 - text: Coding Style
-  url: /contents/coding-style
+  url: /css-styleguide/contents/coding-style
 - text: Colors
-  url: /contents/colors
+  url: /css-styleguide/contents/colors
 - text: CSS for JavaScript
-  url: /contents/css-for-javascript
+  url: /css-styleguide/contents/css-for-javascript
 - text: Designing for different sized plataforms
-  url: /contents/designing-for-different-sized-plataforms
+  url: /css-styleguide/contents/designing-for-different-sized-plataforms
 - text: Grid
-  url: /contents/grid
+  url: /css-styleguide/contents/grid
 - text: Stylesheets Folder Architecture
-  url: /contents/stylesheets-folder-architecture
+  url: /css-styleguide/contents/stylesheets-folder-architecture
 - text: Tools
-  url: /contents/tools
+  url: /css-styleguide/contents/tools
 - text: Typography
-  url: /contents/typography
+  url: /css-styleguide/contents/typography
 - text: Units
-  url: /contents/units
+  url: /css-styleguide/contents/units
+
