--- a/_config.yml
+++ b/_config.yml
@@ -18,23 +18,23 @@ collections:
 navigation:
 - text: Flama’s CSS Styleguide
   url: /
-- text: Class Naming Convention
-  url: /contents/class-naming-convention
-- text: Coding Style
+- text: 1. Coding Style
   url: /contents/coding-style
-- text: Colors
-  url: /contents/colors
-- text: CSS for JavaScript
-  url: /contents/css-for-javascript
-- text: Designing for different sized plataforms
-  url: /contents/designing-for-different-sized-plataforms
-- text: Grid
-  url: /contents/grid
-- text: Stylesheets Folder Architecture
-  url: /contents/stylesheets-folder-architecture
-- text: Tools
+- text: 2. Tools
   url: /contents/tools
-- text: Typography
-  url: /contents/typography
-- text: Units
+- text: 3. Class Naming Convention
+  url: /contents/class-naming-convention
+- text: 4. Stylesheets Folder Architecture
+  url: /contents/stylesheets-folder-architecture
+- text: 5. Units
   url: /contents/units
+- text: 6. Colors
+  url: /contents/colors
+- text: 7. Typography
+  url: /contents/typography
+- text: 8. Grid
+  url: /contents/grid
+- text: 9. Designing for different sized plataforms
+  url: /contents/designing-for-different-sized-plataforms
+- text: 10. CSS for JavaScript
+  url: /contents/css-for-javascript
