--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,10 @@ github_username:  flama
 markdown: kramdown
 permalink: /title
 
-assets:
-  sources:
-    - assets/fonts
-    - assets/javascripts
+# assets:
+#   sources:
+#     - assets/fonts
+#     - assets/javascripts
 
 collections:
   contents:
