--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "assets"]
-	path = assets
-	url = git@github.com:flama/flama-pages-style.git
+  path = assets
+  url = https://github.com/flama/flama-pages-style.git
